assets/www/style.css
/* ... */
.grass #awards .award.flex {
  position: absolute;
  top: 0; left: 0;
  display: none;
}
.grass #sprouts .award {
  background-image: url('images/sprout1-lg.png');
  background-position: bottom right;
  width: 238px; height: 885px;
  /* adjust to effective width of 100px to match shields */
  margin-left: -20px; margin-right: -118px;
  -webkit-transform: translate3d(0,138px,0) scale(.143,.078);
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-duration: 1.5s;
  -webkit-transition-timing-function: ease-in-out;
  -webkit-transform-origin: 70px bottom;

  -moz-transform: translate(0,138px) scale(.143,.078);
  -moz-transition-property: -moz-transform;
  -moz-transition-duration: 1.5s;
  -moz-transition-timing-function: ease-in-out;
  -moz-transform-origin: 70px bottom;
}
.grass #sprouts .award.show {
  -webkit-transform: translate3d(0,0,0);
  -moz-transform: translate(0,0);
}
.grass #sprouts {
  height: 885px;
  bottom: 104px;
}

#ruler {
  top: 0; bottom: 0;
}
#ruler > div {
  position: absolute;
  left: 0; width: 100%;
  height: 25%;
}
#ruler > .background,
#ruler .foreground {
  position: absolute;
  bottom: 0; left: 0; width: 38px; height: 100%;
  background: url('images/ruler-tile-dk.png') repeat-y bottom left;
}
#ruler .foreground {
  height: 100%; /* override on element */
  background-image: url('images/ruler-tile.png');
  -webkit-transition: height 1s ease;
  -moz-transition: height 1s ease;
  transition: height 1s ease;
}
#ruler > .ground       { bottom: 0; }
#ruler > .troposphere  { bottom: 25%; }
#ruler > .stratosphere { bottom: 50%; }
#ruler > .mesosphere   { bottom: 75%; }
#ruler .stars {
  position: absolute;
  left: 35px;
  background: url('images/star-small-outline.png') repeat-x;
  height: 37px;
}
#ruler .stars.one {
  top: 20.5%;
  width: 41px;
}
#ruler .stars.two {
  top: 45.9%;
  width: 82px;
}
#ruler .stars.three {
  top: 71.3%;
  width: 123px;
}
#ruler .stars.highlight {
  background-image: url('images/star-small.png');
}

/* make sure #nell>div gets pointer events */
#clouds, #clouds > *, #sprouts, #ruler, #ruler > *, #balloons, #awards,
#mask, #video, #rotate {
  pointer-events: none;
}
/* don't highlight nell when she is tapped */
#nell, #nell * {
 -webkit-tap-highlight-color: rgba(0,0,0,0);
 tap-highlight-color: rgba(0,0,0,0);
}
#nell {
  overflow: visible;
}
#nell > div {
  position: absolute; right: 0;
}
#nell > .ground { bottom: 0; }
#nell > .troposphere { bottom: 100%; }
#nell > .stratosphere { bottom: 200%; }
#nell > .mesosphere { bottom: 300%; }

#nell > .ground {
  width: 197px; height: 466px;
}
#nell > .ground > .nell {
  position: absolute; right: -124px; bottom: 15px;
}
#nell > .troposphere {
  width: 260px; height: 865px;
}
.nells .hotair {
  width: 510px; height: 825px;
}
.nells .hotair .nellscaler {
  position: absolute; right: 183px; bottom: 16px;
  clip: rect(auto,auto,220px,auto);
  -webkit-transform-origin: bottom right;
  -webkit-transform: scale3d(0.62,0.62,1);
  -moz-transform-origin: bottom right;
  -moz-transform: scale3d(0.62,0.62,1);
}
.nells .hotair .nell {
  position: absolute; right: 0; bottom: 0;
}
.nells .hotair .foreground {
  position: absolute; top: 0; bottom: 0; left: 0; right: 0;
  background: url('images/hotair.png') no-repeat;
}
#nell > .troposphere > .hotair {
  position: absolute;
  bottom: 39px; right: -250px;
}
#nell > .stratosphere {
  width: 561px; height: 305px;
  -webkit-transform: rotate(8deg) translate3d(-10px,0,0);
  -moz-transform: rotate(8deg) translate(-10px,0);
}
#nell > .stratosphere .jet {
  position: absolute;
  bottom: 0; right: 0;
}
.nells .jet .nellscaler {
  position: absolute;
  bottom: 117px; right: 138px;
  clip: rect(52px,auto,220px,auto);
  -webkit-transform-origin: bottom left;
  -webkit-transform: scale3d(0.3,0.3,1);
  -moz-transform-origin: bottom left;
  -moz-transform: scale3d(0.3,0.3,1);
}
.nells .jet {
  width: 561px; height: 305px;
}
.nells .jet .foreground,
.nells .jet .background {
  position: absolute;
  top: 0; bottom: 0; left: 0; right: 0;
  background-repeat: no-repeat;
}

.nells .jet .background {
  background-image: url('images/jet1.png');
}
.nells .jet .foreground {
  background-image: url('images/jet2.png');
}
#nell > .mesosphere {
  width: 255px; height: 626px;

}
#nell > .mesosphere .astronaut {
   position: absolute;
   bottom: 153px; left: 0;
}
.nells .astronaut {
   width: 393px; height: 473px;
   -webkit-transform-origin: 127px 400px;
   -moz-transform-origin: 127px 400px;
}
.nells .astronaut .nellscaler {
  position: absolute; top: 36px; left: -99px;
  -webkit-transform-origin: top center;
  -webkit-transform: rotate(-39.5deg);
  -moz-transform-origin: top center;
  -moz-transform: rotate(-39.5deg);
}
.nells .astronaut .foreground,
.nells .astronaut .background {
  position: absolute;
  top: 0; bottom: 0; left: 0; right: 0;
  background-repeat: no-repeat;
}
.nells .astronaut .background {
  background-image: url('images/astronaut1.png');
}
.nells .astronaut .foreground {
  background-image: url('images/astronaut2.png');
}
/* layout for nell parts */
.nells .nell,
.nells .nellscaler {
  width: 321px; height: 466px;
}
.nells .nell > div {
  position: absolute;
  left: 0; right: 0;
  top: 0; bottom: 0;
  background-repeat: no-repeat;
}
.nells .nell .hair { background-image: url('images/nell-hair.png'); }
.nells .nell .body { background-image: url('images/nell-body.png'); }
.nells .nell .head { background-image: url('images/nell-head.png'); }

.nells .nell .body, /* default */
.nells .nell .head, /* default */
.n0 .nells .nell .body,
.n0 .nells .nell .head { background-position: 0px 0px; }
.n1 .nells .nell .body,
.n1 .nells .nell .head { background-position: -321px 0px; }
.n2 .nells .nell .body,
.n2 .nells .nell .head { background-position: -642px 0px; }
.n3 .nells .nell .body,
.n3 .nells .nell .head { background-position: -963px 0px; }
.n4 .nells .nell .body,
.n4 .nells .nell .head { background-position: -1284px 0px; }
/* ... */

